# cookiecutter-airflow-plugin

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  plugin.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/operators/: __init__.py
{{ cookiecutter.project_slug }}/tasks/: __init__.py
