[metadata]
name = {{ cookiecutter.project_slug }}
package_name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = {{ cookiecutter.project_description }}
url = {{ cookiecutter.github_url }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
long_description = file: README.rst
license = MIT License
keywords =
    apache
    airflow
    plugin
platforms = any
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: POSIX
    Natural Language :: English
    Environment :: Plugins

[options.extras_require]
dev =
    apache-airflow[s3,postgres]<=1.10.3
    invoke
    pre-commit
    mypy;python_version>="3.5"
    isort
    flake8
    flake8-bugbear;python_version>="3.5"
    rope
    black;python_version>="3.6"
tests =
    pytest
    pytest-cov
    pytest-xdist
    pytest-timeout
    twine
    readme-renderer[md]
    hypothesis
docs =
    parver
    sphinx
    sphinx-autodoc-types
    sphinx-rtd-theme

[options]
zip_safe = true
python_requires = >=3.6
setup_requires = setuptools>=41.0
install_requires =

[bdist_wheel]
universal = 1

[tool:pytest]
plugins = cov flake8 xdist
addopts = -ra --flake8 --cov -n auto
norecursedirs = .git _build dist news tasks docs
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL

[flake8]
max-line-length = 90
select = C,E,F,W,B,B950
ignore = D203,F401,E123,E203,W503,E501
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity = 13

[isort]
atomic = true
not_skip = __init__.py
line_length = 90
indent = '    '
multi_line_output = 3
force_grid_wrap=0
combine_as_imports=True
known_third_party = hypothesis,invoke,pytest,setuptools,six
known_first_party = {{ cookiecutter.package_name }},tests
include_trailing_comma = true
